@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: backgammon.h,v 1.342 2007/05/31 22:29:38 c_anthon Exp $
+ * $Id: backgammon.h,v 1.343 2007/07/02 12:43:38 ace Exp $
  */
 
 #ifndef _BACKGAMMON_H_
@@ -279,7 +279,7 @@ extern int nThreadPriority;
 extern int fCheat;
 extern unsigned int afCheatRoll[ 2 ];
 extern int fGotoFirstGame;
-extern char szLang[ 32 ];   
+extern char *szLang;   
 
 extern char *szCurrentFileName, *szCurrentFolder;
 
@@ -1047,7 +1047,7 @@ EPC( int anBoard[ 2 ][ 25 ], float *arEPC, float *arMu, float *arSigma,
 extern char *
 ShowEPC( int anBoard[ 2 ][ 25 ] );
 
-extern void SetupLanguage(char *newLangCode);
+extern char *SetupLanguage(char *newLangCode);
 extern void SaveRolloutSettings ( FILE *pf, char *sz, rolloutcontext *prc );
 
 #ifdef WIN32
